# community_chess

./: .gitignore  24hr.bash  Dockerfile  README.md  database.json  fly.toml  mypy.ini  pyproject.toml  requirements.txt
.pyre/: pyre.stderr
requirements/: dev.txt  prod.txt
src/: __init__.py  board.py  comment.py  database.py  game.py  main.py  moves.py  responseDaemon.py  test_moves.py
src/chessbot/: __init__.py  arguments.py  database.py  get_refresh_token.py  moves.py  outcome.py  player.py  schedule.py
src/moves/: test.py
stubs/cairosvg/: __init__.pyi
tests/: test_database.py  test_moves.py
